a lot more cleanup of address usage and such